5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1618_2930.log
== TEST (2019-04-02 11:07:33) 
-- CODE:
from math import*
t=float(input("escreva T em segundos"))


comprimento=9.81*(t/2*pi)**2

print(comprimento)
-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:15:13) 
-- CODE:
from math import*
t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 5
    comprimento=g*(t/2pi)**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:15:20) 
-- CODE:
from math import*
t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 5
    comprimento=g*(t/2pi)**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:15:44) 
-- CODE:
from math import*
t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 5
    comprimento=g*(t/2pi)**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:01) 
-- CODE:
from math import*
t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*t/2pi**2

print(comprimento)
-- ERROR:
File "XXXX", line 5
    comprimento=g*t/2pi**2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:46) 
-- CODE:
from math import*
t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)

print(comprimento)
-- ERROR:
File "XXXX", line 5
    comprimento=g*(t/2pi)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:06) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*t

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:40) 
-- CODE:
from math import *

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=(g*(t/2pi)**2)

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=(g*(t/2pi)**2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:41) 
-- CODE:
from math import *

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=(g*(t/2pi)**2)

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=(g*(t/2pi)**2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:41) 
-- CODE:
from math import *

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=(g*(t/2pi)**2)

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=(g*(t/2pi)**2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:41) 
-- CODE:
from math import *

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=(g*(t/2pi)**2)

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=(g*(t/2pi)**2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:58) 
-- CODE:
from math import *

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*t/2pi**2

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*t/2pi**2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:06) 
-- CODE:
from math import *

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*t/2**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:41) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:42) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:59) 
-- CODE:
import math from*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 1
    import math from*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:19:01) 
-- CODE:
import math from*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 1
    import math from*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:19:29) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:19:43) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2)**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:20:27) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:20:28) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:20:29) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:21:19) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2)**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:21:24) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)**2

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:21:32) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)^2

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)^2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:21:34) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2pi)^2

print(comprimento)
-- ERROR:
File "XXXX", line 6
    comprimento=g*(t/2pi)^2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:21:48) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2*pi)**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:22:23) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleração da gravidade"))

comprimento=g*(t/2*pi)**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:22:47) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

comprimento=g*(t/2*pi)**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:23:04) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

comprimento=g*(t/2*pi)**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:23:55) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

comprimento=g*(t/2*pi)*(t/2*pi)

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:24:20) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

comprimento=g*(t/2*pi)*(t/2*pi)

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:24:53) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

comprimento=g*(t/2*3.14)**2

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:25:21) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

comprimento=g*((t/2*pi)**2)

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:26:57) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

a=(t/2pi)**2
comprimento=g*a

print(comprimento)
-- ERROR:
File "XXXX", line 6
    a=(t/2pi)**2
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:04) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

a=(t/2*pi)**2
comprimento=g*a

print(comprimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:55) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

a=(t/2*pi)**2
L=g*a

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:28:41) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

L=g*(t/2*pi)

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:29:06) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

L=(t/2*pi)**2

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:29:45) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

L=(t/2*pi)

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:03) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

L=(t/2*pi)**2

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:31:23) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("escreva a aceleracao da gravidade"))

L=(t/2*pi)*(t/2*pi)

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:31:48) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))


L=(t/2*pi)*(t/2*pi)

print(L)
-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:36:03) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))


L=(t//2*pi)**2

print(L)
-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:38:03) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("aceleracao da gravidade"))

L=g*((t/2*pi)**2)

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:38:52) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))


L=(t/2*pi)**2

print(L)
-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:39:14) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))


L=(t/(2*pi))**2

print(L)
-- OUTPUT:
10.13211836423378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:39:48) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("aceleracao da gravidade"))

L=g*(t/(2*pi))**2

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:39:59) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("aceleracao da gravidade"))

L=g*(t/(2*pi))**2

print(L)
-- EXECUTION TIME:
0.152694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2930/main.py", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:40:04) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("aceleracao da gravidade"))

L=g*(t/(2*pi))**2

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:40:27) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("aceleracao da gravidade"))

L=(g*(t/(2*pi)))**2

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:40:42) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("aceleracao da gravidade"))

L=g*(t/(2*pi))**2

print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:40:54) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))
g=float(input("aceleracao da gravidade"))

L=g*(t/(2*pi))**2

print(L)
-- EXECUTION TIME:
0.138149
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2930/main.py", line 4, in <module>
    g=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:42:10) 
-- CODE:
from math import*

t=float(input("escreva T em segundos"))

g=9.81
L=g*(t/(2*pi))**2

print(L)
-- EXECUTION TIME:
0.183247
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313338
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
